updated image paths

--- a/public/research.html
+++ b/public/research.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Favicon -->
-     <link href="../assets/favicon.ico" rel="icon" type="image/png" >
+     <link href="assets/favicon.ico" rel="icon" type="image/png" >
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
@@ -31,7 +31,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a href="index.html" class="navbar-brand"><img src="../assets/cube-one-color-48-189122.png" alt=""></a>
+      <a href="index.html" class="navbar-brand"><img src="assets/cube-one-color-48-189122.png" alt=""></a>
       <div class="collapse navbar-collapse" id="myNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
@@ -69,19 +69,19 @@
     </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/pexels-photo (1).jpg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo (1).jpg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
+              <img src="assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
             </div>
         </div>
   </div>
@@ -192,7 +192,7 @@
   </div>
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
-      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
+      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
       <div class="collapse navbar-collapse" id="footer">
 
       <div class="row">
