--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Favicon -->
-     <link href="../assets/favicon.ico" rel="icon" type="image/png" >
+     <link href="assets/favicon.ico" rel="icon" type="image/png" >
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
@@ -31,7 +31,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a href="index.html" class="navbar-brand"><img src="../assets/cube-one-color-48-189122.png" alt=""></a>
+      <a href="index.html" class="navbar-brand"><img src="assets/cube-one-color-48-189122.png" alt=""></a>
       <div class="collapse navbar-collapse" id="myNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
@@ -69,19 +69,19 @@
     </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/pexels-photo (1).jpg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo (1).jpg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo-127053.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
+              <img src="assets/pexels-photo-776657.jpeg" alt="" class="img-fluid">
             </div>
 
             <div class="carousel-item">
-              <img src="../assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
+              <img src="assets/cube-play-colorful-eye-numbers-51361_large.jpeg" alt="" class="img-fluid">
             </div>
         </div>
   </div>
@@ -110,7 +110,7 @@
       <div class="row shadow-lg">
         <div class="col-md-6">
           <div>
-            <img src="../assets/pexels-photo-207924.jpeg" class="img-fluid img-thumbnail" alt="">
+            <img src="assets/pexels-photo-207924.jpeg" class="img-fluid img-thumbnail" alt="">
           </div>
         </div>
         <div class="col-md-6"><br>
@@ -124,18 +124,18 @@
       <hr class="my-5">
 <div class="row shadow-lg">
       <div class="col-md-4">
-        <img src="../assets/pexels-photo-136349.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+        <img src="assets/pexels-photo-136349.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
         <h1 class="text-center" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="hello world asldfa a;sldf ;adsfpoier pqoweri z.c;l">Initialize</button></h1>
       </div>
 
 
         <div class="col-md-4">
-          <img src="../assets/pexels-photo-209728.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+          <img src="assets/pexels-photo-209728.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
           <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="interact with others when appropriate in situations where strenths can be identified w/others so that all know">Interact</button></h5>
         </div>
 
         <div class="col-md-4">
-          <img src="../assets/play-stone-network-networked-interactive-163064.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
+          <img src="assets/play-stone-network-networked-interactive-163064.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
           <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="ionce one has spent enough time wrestling w/their strengths they qualify themselves oas a peer or mentor for those who have similar strengths.">Influence</h5>
         </div>
 
@@ -165,7 +165,7 @@
 
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
-      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="../assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
+      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
       <div class="collapse navbar-collapse" id="footer">
 
       <div class="row">
