--- a/public/connect.html
+++ b/public/connect.html
@@ -114,7 +114,7 @@
               </div>
 
               <div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
+                <a id="contactLinks" href="mailto:jenniferschumann1@gmail.com" class="btn btn-secondary" data-dismiss="modal">Send Message</a>
               </div>
             </form>
 
@@ -136,9 +136,7 @@
                   </div>
                   <div class="modal-footer">
                     <!-- send to which email? -->
-                    <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button> -->
-
-                    <a id="contactLinks" href="mailto:jenniferschumann1@gmail.com" class="btn btn-secondary" data-dismiss="modal">Send Message</a>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
 
                   </div>
             </div>
