--- a/public/connect.html
+++ b/public/connect.html
@@ -114,7 +114,7 @@
               </div>
 
               <div>
-                <a id="contactLinks" href="mailto:jenniferschumann1@gmail.com" class="btn btn-secondary" data-dismiss="modal">Send Message</a>
+                <button type="submit" class="btn btn-primary">Send Message</button>
               </div>
             </form>
 
