--- a/public/connect.html
+++ b/public/connect.html
@@ -95,22 +95,22 @@
       <div class="container jumbotron" style="background-color:#768DA7">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <form class="" action="index.html" method="post">
+            <form class="" action="https://formspree.io/d3vignition@gmail.com" method="POST">
               <div class="form-group">
                 <label for="name">Your Name:</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="name" name="name">
 
               </div>
 
               <div class="form-group">
                 <label for="email">Your Email:</label>
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" name="_replyto">
 
               </div>
 
               <div class="form-group">
                 <label for="message">Message:</label>
-                <textarea rows="7" cols="100" class="form-control" id="message"></textarea>
+                <textarea rows="7" class="form-control" id="message" name="message"></textarea>
               </div>
 
               <div>
