updated content on home page - still needs footer updates

--- a/public/index.html
+++ b/public/index.html
@@ -98,9 +98,9 @@
             <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Do you know</span> what my favorite part of the game is?  The opportunity to play.  -Mike Singletary</p>
 
         <hr class="my-1">
-            <p><span class="badge" style="background-color:#052F5F">In enim justo,</span> rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
+            <p><span class="badge" style="background-color:#052F5F">In web development,</span> game theory & logic is relevant for making the user experience lighthearted, friendly, engaging, & purposeful!</p>
 
-            <button type="button" class="btn btn-warning text-primary">Learn More</button>
+            <button type="button" class="btn btn-warning text-primary"><a href="about.html" class="nav-link">Learn More</a></button>
       </div>
   </div>
 <hr class="my-5">
@@ -116,8 +116,8 @@
         <div class="col-md-6"><br>
           <h2 class="h2 text-primary" id="fontK">Superior Game Logic</h2>
           <hr>
-          <p class="h5 text-primary" id="fontK">Quote about motto which emphasizes initializing individual to the point they want to interact & then influence through the experience of play. </p>
-
+          <p class="h5 text-primary" id="fontK">When users are playfully engaged upon visiting a website, they want to return as an individual with an identity to be acknowledged & interacted with in a place with like-minded peers who have mutual interests. </p>
+<!-- Quote about motto which emphasizes initializing individual to the point they want to interact & then influence through the experience of play. -->
         </div>
       </div>
 
@@ -125,18 +125,18 @@
 <div class="row shadow-lg">
       <div class="col-md-4">
         <img src="assets/pexels-photo-136349.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-        <h1 class="text-center" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="hello world asldfa a;sldf ;adsfpoier pqoweri z.c;l">Initialize</button></h1>
+        <h1 class="text-center" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Inviting & interactive content draws in users as potential new community members.">Initialize</button></h1>
       </div>
 
 
         <div class="col-md-4">
           <img src="assets/pexels-photo-209728.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="interact with others when appropriate in situations where strenths can be identified w/others so that all know">Interact</button></h5>
+          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Strategic & purposeful discourse through playful engagement builds relationships while validating individual assets brought to the table.">Interact</button></h5>
         </div>
 
         <div class="col-md-4">
           <img src="assets/play-stone-network-networked-interactive-163064.jpeg" class="img-fluid img-thumbnail" alt=""><br><br>
-          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="ionce one has spent enough time wrestling w/their strengths they qualify themselves oas a peer or mentor for those who have similar strengths.">Influence</h5>
+          <h5 class="text-center text-primary" id="fontK"><button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Cultivated community relationships create opportunities for individual growth in strengths which transform into potential for peer &/or mentorship roles.">Influence</h5>
         </div>
 
 
@@ -177,7 +177,7 @@
               <ul class="list-inline">
                   <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
                   <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                  <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                  <li class="list-inline-item text-danger"><a href="https://twitter.com/piquedplay3" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
                   <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
               </ul>
             </div>
