--- a/public/index.html
+++ b/public/index.html
@@ -149,16 +149,42 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Title</h3>
+                  <div class="modal-header"><h3 class="modal-title">Send Message</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Hello World
+
+                    <form class="" action="https://formspree.io/d3vignition@gmail.com" method="POST">
+                      <div class="form-group">
+                        <label for="name">Your Name:</label>
+                        <input type="text" class="form-control" id="name" name="name">
+
+                      </div>
+
+                      <div class="form-group">
+                        <label for="email">Your Email:</label>
+                        <input type="email" class="form-control" id="email" name="_replyto">
+
+                      </div>
+
+                      <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea rows="7" class="form-control" id="message" name="message"></textarea>
+                      </div>
+
+
+
+
+
+
+
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                    <!-- data-dismiss="modal" -->
                   </div>
+                  </form>
             </div>
           </div>
     </div>
