--- a/public/whack.html
+++ b/public/whack.html
@@ -138,7 +138,7 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary">Whack</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary" data-toggle="tooltip" data-placement="bottom" title="This game is not yet responsive for smaller screens yet, but you can press play & try one round anyway below (..just one round... it's not addictive at all!).">Whack</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
             <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Take an office break</span> and see how many computers you can whack!</p>
@@ -190,6 +190,10 @@
             </div>
           </div>
     </div>
+
+<!-- data-toggle="tooltip" data-placement="bottom" title="This game is not yet responsive for smaller screens yet, but press play & try one round anyway below (..just one round... it's not addictive at all!)." -->
+
+
 
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
