added pics for research cards

--- a/public/research.html
+++ b/public/research.html
@@ -141,7 +141,8 @@
 
         <div class="col-md-6">
           <div class="card">
-            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+
+            <a href="#"><img src="assets/pexels-photo-262438.jpeg" class="card-img-top img-fluid"></a>
           <h4 class="card-title text-center pt-2">The Values of Play</h4>
           <p class="card-text pr-2 pl-2">A longitudinal study of those considered to have led “the more interesting and fulfilling lives” pointed to those who had placed playfulness “at the center of things” (Sutton-Smith, 2009, p. 39).  The value of play as a “cultural function is to mediate social conflict” (Sutton-Smith, 2009, p. 73).  Play is an act which enables one to express their power (Sutton-Smith, 2009, p. 74).  Socially, when play becomes competitive, it serves as a vehicle for representing the strengths and power for and of one’s tribe (Sutton-Smith, 2009, p. 75).  Play is an act of will in which one can “maintain your chosen identity by exercising commentary on that identity” (Sutton-Smith, 2009, p. 102).  Play, without rebuttal, is equated with intrinsic motivation (Sutton-Smith, 2009, p. 187).  Play is referred to as “the basic ongoing vehicle for the construction of meaning” (Sutton-Smith, 2009, p. 191).
           </p>
@@ -150,7 +151,7 @@
 
       <div class="col-md-6">
           <div class="card">
-            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+            <a href="#"><img src="assets/pexels-photo-210747.jpeg" class="card-img-top img-fluid"></a>
           <h4 class="card-title text-center pt-2">Play Expands Perspective</h4>
           <p class="card-text pr-2 pl-2">Fostering an attitude of playfulness addresses many goals at once; “playfulness is a physical, psychological, and emotional attitude toward things, people, and situations” (Sicart, 2014, p. 21).  Play becomes an interface through which engaged learning impacts a world, and vice versa.  On one hand, “playfulness means taking over a world to see it through the lens of play, to make it shake and laugh and crack because because we play with it” (Sicart, 2014, p. 24).  Conversely, “through playfulness, we see the world, and we also see how the world could be structured as play” (Sicart, 2014, p. 24).  Even though the event is a simulation of play, there is authenticity in the act because “through playfulness, we open the possibility of expressing who we are” (Sicart, 2014, p. 28).
           </p>
@@ -159,7 +160,7 @@
 
       <div class="col-md-6">
           <div class="card">
-            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+            <a href="#"><img src="assets/battle-black-blur-260024.jpg" class="card-img-top img-fluid"></a>
           <h4 class="card-title text-center pt-2">Skills from Play Transfer</h4>
           <p class="card-text pr-2 pl-2">In a study investigating the impact of chess in a gifted class, the value of such an approach was defended for its ability to provide competition which “was good for students and it taught them appropriate coping skills” and “one of the few things proven to raise IQ scores” (Adams, 2012, p. 243).  A gifted programming approach which utilized chess at the elementary level produced the following results: "The students learned to play chess, but more importantly, they learned skills that they would not have been ‘taught’ directly.  The students learned to appreciate their opponent in the game, to think through two or three moves ahead, as well as to focus their attention.  These skills were those that the teachers in the school began to notice.  In my own class, students who had difficulty deciding what to do first when given instructions started asking fewer questions while figuring out the correct steps" (Adams, 2012, p. 245).
           </p>
@@ -168,7 +169,7 @@
 
       <div class="col-md-6">
           <div class="card">
-            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+            <a href="#"><img src="assets/pexels-photo-262529.jpeg" class="card-img-top img-fluid"></a>
           <h4 class="card-title text-center pt-2">Play as Practice Builds Experts</h4>
           <p class="card-text pr-2 pl-2">Gladwell (2008) says that one needs approximately 10,000 hours of practice in an area before one is able to be called an expert in it (p. 39). If one hopes to nurture advanced ability so that the ranks of expertise fields become established, perhaps play as practice is warranted.  In an investigative study regarding expert play performance in the game of Scrabble, “we found significant differences between elite and average-rated players on estimates of both cumulative SCRABBLE study and playing time, with many of the top players reporting cumulative estimates between 5,000 and 10,000 hr since their first exposure to the game” (Tuffiash et al, 2007, p. 132).</p>
           </div>
@@ -176,7 +177,7 @@
 
       <div class="col-md-6">
           <div class="card">
-            <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+            <a href="#"><img src="assets/pexels-photo-278911.jpeg" class="card-img-top img-fluid"></a>
           <h4 class="card-title text-center pt-2">Employers Increasingly Consider Play History</h4>
           <p class="card-text pr-2 pl-2">Brown, in his book Play, also highlighted the story regarding Cal Tech’s Jet Propulsion Laboratory (JPL) and the dilemma they faced in the 1990s: "Even though JPL hired the top graduates from top engineering schools like MIT, Stanford, and even Cal Tech itself, the new hires were often missing something. They were not very good at certain types of problem solving that are critical to the job" (Brown, 2009, p. 9). JPL leaders sought to understand why and discovered an article written by a business owner who was also perplexed over the same situation. The business owner “found that those who had worked and played with their hands as they were growing up were able to ‘see solutions’ that those who hadn’t worked with their hands could not (Brown, 2009, p. 10). As a result of this discovery, JPL’s hiring process includes questions to determine applicants’ play history.</p>
           </div>
