different column format for footer on about page

--- a/public/about.html
+++ b/public/about.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
-    <title>Template</title>
+    <title>About</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
 
@@ -111,12 +111,12 @@
 
             <div class="col-md-5">
 
-              <ul class="list-group">
-                <li class="list-group-item">First</li>
-                <li class="list-group-item">Second</li>
-                <li class="list-group-item">Third</li>
-                <li class="list-group-item">Fourth</li>
-                <li class="list-group-item">Fifth</li>
+              <ul class="list-group pt-2">
+                <li class="list-group-item bg-primary">First</li>
+                <li class="list-group-item bg-warning">Second</li>
+                <li class="list-group-item bg-info">Third</li>
+                <li class="list-group-item bg-danger">Fourth</li>
+                <li class="list-group-item bg-success">Fifth</li>
               </ul>
             </div>
 
@@ -169,10 +169,10 @@
       <div class="collapse navbar-collapse" id="footer">
 <!-- collapse the 3 columns to one at small screen -->
       <div class="row">
-          <div class="col pt-4">
+          <div class="col-md-6 col-lg-4 pt-4">
                 <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
           </div>
-          <div class="col pt-3">
+          <div class="col-md-6 col-lg-4 pt-3">
             <div class="text-center">
               <ul class="list-inline">
                   <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
@@ -182,8 +182,8 @@
               </ul>
             </div>
           </div>
-          <div class="col pt-4">
-            <ul class="list-inline">
+          <div class="col-md-6 col-lg-4 pt-4">
+            <ul class="list-inline text-center">
                 <li class="list-inline-item text-primary"><a href="" target="_blank">Terms of Use</a></li>
                 <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE">Privacy Policy</a></li>
                 <li class="list-inline-item text-primary"><a href="" target="_blank">Legal</a></li>
